# network-manager-openvpn-sso

./: Cargo.toml
.github/workflows/: ci.yml  pages.yml  release.yml
src/: oauth.rs  openvpn.rs  secrets.rs
